// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PaymentStatusModal snapshot tests renders closed state (isOpen=false) 1`] = `null`;

exports[`PaymentStatusModal snapshot tests renders failure state with error 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Payment failed
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            The transaction stopped before completion.
          </p>
        </div>
        <button
          class="rounded-lg border border-white/10 px-3 py-1.5 text-sm font-medium text-slate-300 transition-colors hover:border-white/20 hover:text-white"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            50
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 50%;"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-red-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="m6 6 12 12M18 6 6 18"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Failed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                36s
              </span>
            </div>
            <p
              class="mt-3 rounded-xl border border-red-500/20 bg-red-500/10 px-3 py-2 text-sm text-red-300"
            >
              Insufficient balance
            </p>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders failure state with generic error (no step error) 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Payment failed
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            The transaction stopped before completion.
          </p>
        </div>
        <button
          class="rounded-lg border border-white/10 px-3 py-1.5 text-sm font-medium text-slate-300 transition-colors hover:border-white/20 hover:text-white"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            12
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 12%;"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-red-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="m6 6 12 12M18 6 6 18"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Failed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                10s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 16.5c2.25-2.5 3.75-3.75 5.25-3.75 1.75 0 1.75 2.25 3.25 2.25 1.75 0 2.25-6 4.75-6 1.5 0 2 1 3 2.25"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M3 20.25h18"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 16.5V4.5m0 0 4.5 4.5M12 4.5 7.5 9"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M4.5 15.75v1.5A2.25 2.25 0 0 0 6.75 19.5h10.5A2.25 2.25 0 0 0 19.5 17.25v-1.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-2xl border border-red-500/20 bg-red-500/10 px-4 py-3 text-sm text-red-300"
      >
        Network connection lost
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders idle state 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Processing payment
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Stay on this screen while we move through each network step.
          </p>
        </div>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            0
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 0%;"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="m14.25 6 3.75-3.75 3.75 3.75L18 9.75"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M13.5 7.5 6 15m0 0L3.75 17.25 6.75 20.25 9 18m-3-3 3 3"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 16.5c2.25-2.5 3.75-3.75 5.25-3.75 1.75 0 1.75 2.25 3.25 2.25 1.75 0 2.25-6 4.75-6 1.5 0 2 1 3 2.25"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M3 20.25h18"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 16.5V4.5m0 0 4.5 4.5M12 4.5 7.5 9"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M4.5 15.75v1.5A2.25 2.25 0 0 0 6.75 19.5h10.5A2.25 2.25 0 0 0 19.5 17.25v-1.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders pending state (building) 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Processing payment
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Stay on this screen while we move through each network step.
          </p>
        </div>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            13
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 12.5%;"
          />
        </div>
      </div>
      <div
        class="mt-3 flex items-center gap-3"
      >
        <div
          class="flex-1 h-1.5 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full transition-all duration-1000 bg-stellar-400"
            style="width: 96.66666666666667%;"
          />
        </div>
        <span
          class="text-xs font-medium whitespace-nowrap tabular-nums text-slate-400"
        >
          ~58s remaining
        </span>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-stellar-300 animate-spin"
              fill="none"
              viewBox="0 0 24 24"
            >
              <circle
                class="opacity-25"
                cx="12"
                cy="12"
                r="10"
                stroke="currentColor"
                stroke-width="4"
              />
              <path
                class="opacity-80"
                d="M4 12a8 8 0 0 1 8-8V0C5.373 0 0 5.373 0 12h4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  In progress
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M3.75 16.5c2.25-2.5 3.75-3.75 5.25-3.75 1.75 0 1.75 2.25 3.25 2.25 1.75 0 2.25-6 4.75-6 1.5 0 2 1 3 2.25"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M3 20.25h18"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 16.5V4.5m0 0 4.5 4.5M12 4.5 7.5 9"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M4.5 15.75v1.5A2.25 2.25 0 0 0 6.75 19.5h10.5A2.25 2.25 0 0 0 19.5 17.25v-1.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders pending state (confirming) 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Processing payment
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Stay on this screen while we move through each network step.
          </p>
        </div>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            88
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 87.5%;"
          />
        </div>
      </div>
      <div
        class="mt-3 flex items-center gap-3"
      >
        <div
          class="flex-1 h-1.5 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full transition-all duration-1000 bg-stellar-400"
            style="width: 50%;"
          />
        </div>
        <span
          class="text-xs font-medium whitespace-nowrap tabular-nums text-slate-400"
        >
          ~30s remaining
        </span>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-stellar-300 animate-spin"
              fill="none"
              viewBox="0 0 24 24"
            >
              <circle
                class="opacity-25"
                cx="12"
                cy="12"
                r="10"
                stroke="currentColor"
                stroke-width="4"
              />
              <path
                class="opacity-80"
                d="M4 12a8 8 0 0 1 8-8V0C5.373 0 0 5.373 0 12h4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  In progress
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                24s
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders pending state (signing) 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Processing payment
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Stay on this screen while we move through each network step.
          </p>
        </div>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            38
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 37.5%;"
          />
        </div>
      </div>
      <div
        class="mt-3 flex items-center gap-3"
      >
        <div
          class="flex-1 h-1.5 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full transition-all duration-1000 bg-stellar-400"
            style="width: 83.33333333333334%;"
          />
        </div>
        <span
          class="text-xs font-medium whitespace-nowrap tabular-nums text-slate-400"
        >
          ~50s remaining
        </span>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-stellar-300 animate-spin"
              fill="none"
              viewBox="0 0 24 24"
            >
              <circle
                class="opacity-25"
                cx="12"
                cy="12"
                r="10"
                stroke="currentColor"
                stroke-width="4"
              />
              <path
                class="opacity-80"
                d="M4 12a8 8 0 0 1 8-8V0C5.373 0 0 5.373 0 12h4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  In progress
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                8s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 16.5V4.5m0 0 4.5 4.5M12 4.5 7.5 9"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M4.5 15.75v1.5A2.25 2.25 0 0 0 6.75 19.5h10.5A2.25 2.25 0 0 0 19.5 17.25v-1.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders pending state (submitting) 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Processing payment
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Stay on this screen while we move through each network step.
          </p>
        </div>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            63
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 62.5%;"
          />
        </div>
      </div>
      <div
        class="mt-3 flex items-center gap-3"
      >
        <div
          class="flex-1 h-1.5 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full transition-all duration-1000 bg-stellar-400"
            style="width: 66.66666666666666%;"
          />
        </div>
        <span
          class="text-xs font-medium whitespace-nowrap tabular-nums text-slate-400"
        >
          ~40s remaining
        </span>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-stellar-300 animate-spin"
              fill="none"
              viewBox="0 0 24 24"
            >
              <circle
                class="opacity-25"
                cx="12"
                cy="12"
                r="10"
                stroke="currentColor"
                stroke-width="4"
              />
              <path
                class="opacity-80"
                d="M4 12a8 8 0 0 1 8-8V0C5.373 0 0 5.373 0 12h4Z"
                fill="currentColor"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  In progress
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                16s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-4 w-4 text-slate-300"
              fill="none"
              stroke="currentColor"
              stroke-width="1.7"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 3.75 13.688 8.313 18.25 10l-4.563 1.688L12 16.25l-1.688-4.563L5.75 10l4.563-1.688L12 3.75Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="m18.75 15 .563 1.688L21 17.25l-1.688.563L18.75 19.5l-.563-1.688L16.5 17.25l1.688-.563L18.75 15Z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Waiting
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                Waiting
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentStatusModal snapshot tests renders success state 1`] = `
<div
  class="fixed inset-0 z-[60] flex items-center justify-center bg-slate-950/80 p-4 backdrop-blur-sm"
>
  <div
    aria-labelledby="payment-status-title"
    aria-modal="true"
    class="w-full max-w-xl overflow-hidden rounded-3xl border border-white/10 bg-slate-900/95 shadow-2xl"
    role="dialog"
  >
    <div
      class="border-b border-white/10 px-6 py-5"
    >
      <div
        class="flex items-start justify-between gap-4"
      >
        <div>
          <p
            class="text-xs font-semibold uppercase tracking-[0.24em] text-stellar-300/80"
          >
            Payment Tracker
          </p>
          <h3
            class="mt-2 font-display text-xl font-semibold text-white"
            id="payment-status-title"
          >
            Complete
          </h3>
          <p
            class="mt-1 text-sm text-slate-400"
          >
            Your transaction has been confirmed on the Stellar network.
          </p>
        </div>
        <button
          class="rounded-lg border border-white/10 px-3 py-1.5 text-sm font-medium text-slate-300 transition-colors hover:border-white/20 hover:text-white"
          type="button"
        >
          Close
        </button>
      </div>
      <div
        class="mt-5"
      >
        <div
          class="flex items-center justify-between text-xs text-slate-400"
        >
          <span>
            Progress
          </span>
          <span>
            100
            %
          </span>
        </div>
        <div
          class="mt-2 h-2 overflow-hidden rounded-full bg-white/5"
        >
          <div
            class="h-full rounded-full bg-gradient-to-r from-stellar-500 via-cyan-400 to-emerald-400 transition-all duration-500"
            style="width: 100%;"
          />
        </div>
      </div>
    </div>
    <div
      class="space-y-4 px-6 py-5"
    >
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Building
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Signing
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="absolute left-[1.1rem] top-11 h-[calc(100%-1.25rem)] w-px bg-white/10"
        />
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Submitting
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="flex items-start gap-4 rounded-2xl border border-white/8 bg-white/[0.03] px-4 py-4"
        >
          <div
            class="mt-0.5 flex h-9 w-9 items-center justify-center rounded-full border border-white/10 bg-slate-950/60 text-slate-200"
          >
            <svg
              class="h-5 w-5 text-emerald-400"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.5 12.75l6 6 9-13.5"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </div>
          <div
            class="min-w-0 flex-1"
          >
            <div
              class="flex flex-wrap items-center justify-between gap-2"
            >
              <div>
                <p
                  class="text-sm font-semibold text-white"
                >
                  Confirming
                </p>
                <p
                  class="text-xs text-slate-400"
                >
                  Completed
                </p>
              </div>
              <span
                class="text-xs font-medium text-slate-400"
              >
                2s
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="rounded-2xl border border-emerald-500/20 bg-emerald-500/10 px-4 py-3 text-sm text-emerald-200"
      >
        <p
          class="font-medium"
        >
          Transaction confirmed
        </p>
        <p
          class="mt-1 break-all text-emerald-100/90"
        >
          abc123def456
        </p>
        <a
          class="mt-3 inline-flex items-center gap-2 text-sm font-medium text-emerald-100 transition-colors hover:text-white"
          href="https://stellar.expert/explorer/public/tx/abc123def456"
          rel="noopener noreferrer"
          target="_blank"
        >
          View on Stellar Expert
          <svg
            class="h-4 w-4"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
